<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
           android:id="@+id/group_menu_motoclube">
        <item
                android:id="@+id/nav_integrantes"
                android:title="@string/menu_integrantes"/>
        <item
                android:id="@+id/nav_meu_motoclube"
                android:title="@string/menu_meu_motoclube"/>
        <item
                android:id="@+id/nav_motoclubes"
                android:title="@string/menu_motoclubes"/>

        <item
                android:id="@+id/nav_eventos"
                android:title="@string/menu_eventos">

            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/nav_evento_privado"
                          android:title="@string/menu_evento_privado"/>
                    <item android:id="@+id/nav_evento_publico"
                          android:title="@string/menu_evento_publico"/>
                </group>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/group_menu_sair">

        <item android:id="@+id/nav_sair"
              android:title="@string/menu_sair"/>

    </group>

</menu>
