<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.activity.login.LoginActivity"
>

    <ImageView
            app:srcCompat="@drawable/amigos_viajando_de_moto"
            android:id="@+id/login_image"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop" android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="50dp" android:layout_marginBottom="50dp" android:adjustViewBounds="true"
            app:layout_constraintHorizontal_bias="00" android:scrollX="-30dp" android:alpha="0.6"
            android:contentDescription="@string/background_login"/>

    <EditText
            android:id="@+id/txt_email_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/login_text"
            android:textColor="@color/white"
    />

    <EditText
            android:id="@+id/txt_password_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_login"
            android:background="@drawable/login_text"
            android:textColor="@color/white"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_login"
            app:layout_constraintVertical_bias="0.0" android:background="@drawable/login_button"
            android:textColorHint="@color/white" android:textColor="@color/white" android:textSize="14sp"/>

    <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_password_login"
            app:layout_constraintStart_toStartOf="@+id/txt_password_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <TextView
            android:text="@string/esqueci_minha_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txt_forget_password" android:textColor="@color/white" android:background="#00FFFFFF"
            android:textSize="12sp" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
    <TextView
            android:text="@string/criar_conta"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/login_image"

            android:id="@+id/txt_create_account" android:textColor="@color/white" android:background="#00FFFFFF"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>