<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.activity.user.UserActivity"
            android:paddingBottom="16dp"
            android:fitsSystemWindows="true"
            android:id="@+id/activity_user_form">

        <ImageView
                android:src="@drawable/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/activity_user_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:scaleType="centerCrop"
                app:layout_constraintHorizontal_bias="0.0"/>

        <androidx.cardview.widget.CardView android:layout_width="@dimen/card_image_size"
                                           android:layout_height="@dimen/card_image_size"
                                           android:layout_marginTop="220dp"
                                           app:layout_constraintTop_toTopOf="@+id/activity_user_img"
                                           app:cardBackgroundColor="@color/green"
                                           app:cardCornerRadius="@dimen/card_image_corner"
                                           app:layout_constraintEnd_toEndOf="@+id/activity_user_img"
                                           android:layout_marginEnd="16dp"
                                           android:id="@+id/activity_user_add_photo_card">


            <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:src="@drawable/ic_camera"
                    android:id="@+id/activity_user_add_photo"
                    android:scaleType="centerCrop" android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_img" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:id="@+id/input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome" android:inputType="text" android:singleLine="true"
                    android:textSize="16sp"
                    android:id="@+id/activity_user_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_name" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:id="@+id/input_layout_apelido">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apelido" android:inputType="text" android:singleLine="true"
                    android:textSize="16sp"
                    android:id="@+id/activity_user_apelido"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/activity_user_tipo_sanguineo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_apelido"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        </androidx.appcompat.widget.AppCompatSpinner>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_data_nascimento"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_tipo_sanguineo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_user_data_nascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_de_nascimento" android:inputType="date" android:singleLine="true"
                    android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/activity_user_cargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_data_nascimento"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        </androidx.appcompat.widget.AppCompatSpinner>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_telefone"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_cargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_user_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:digits="1234567890+-() "
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email" android:inputType="text" android:singleLine="true"
                    android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password" android:inputType="textPassword" android:singleLine="true"
                    android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:text="@string/salvar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/activity_user_btn_salvar"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:background="@color/green"
                android:textColor="@color/white"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>